@@ -2,18 +2,18 @@ require 'date'
 
 Gem::Specification.new do |spec|
 
-  spec.name                      =  'sorted-array'
-  spec.rubyforge_project         =  'sorted-array'
-  spec.version                   =  '1.0.1'
+  spec.name                      =  'array-sorted'
+  spec.rubyforge_project         =  'array-sorted'
+  spec.version                   =  '1.0.0'
 
   spec.summary                   =  "Provides Array::Sorted and SortedArray."
   spec.description               =  "A subclass of Array::Hooked that also keeps array sorted."
 
   spec.authors                   =  [ 'Asher' ]
   spec.email                     =  'asher@ridiculouspower.com'
-  spec.homepage                  =  'http://rubygems.org/gems/sorted-array'
+  spec.homepage                  =  'http://rubygems.org/gems/array-sorted'
 
-  spec.add_dependency            'hooked-array'
+  spec.add_dependency            'array-hooked'
 
   spec.date                      = Date.today.to_s
   
